@@ -229,6 +229,31 @@ load 'my_exec'
                  "You may need to remove this file if you broke the test once"
   end
 
+  def test_generate_bin_bindir
+    @installer.wrappers = true
+
+    @spec.executables = ["my_exec"]
+    @spec.bindir = '.'
+
+    exec_file = @installer.formatted_program_filename "my_exec"
+    exec_path = File.join util_gem_dir(@spec.version), exec_file
+    File.open exec_path, 'w' do |f|
+      f.puts '#!/usr/bin/ruby'
+    end
+
+    @installer.gem_dir = util_gem_dir
+
+    @installer.generate_bin
+
+    assert_equal true, File.directory?(util_inst_bindir)
+    installed_exec = File.join(util_inst_bindir, "my_exec")
+    assert_equal true, File.exist?(installed_exec)
+    assert_equal(0100755, File.stat(installed_exec).mode) unless win_platform?
+
+    wrapper = File.read installed_exec
+    assert_match %r|generated by RubyGems|, wrapper
+  end
+
   def test_generate_bin_scripts
     @installer.wrappers = true
     util_make_exec
